welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:32: error: ';' expected but 'if' found.
} if !estSurMessage(){}
  ^BDRBuggle:37: error: Unmatched closing brace '}' ignored here
	}
        ^